@@ -4,7 +4,7 @@ import java.util.*;
 
 public class ListDemo {
     public static void main(String[] args) {
-        List<String> names = Arrays.asList("Alice","Bob","Charlie");
+        List<String> names = new ArrayList<>(List.of("Alice","Bob","Charlie"));
         System.out.println(names.get(0));
         System.out.println(names);
     }
